fix -lastmessage overflow bug

--- a/src/Components/Chats.scss
+++ b/src/Components/Chats.scss
@@ -26,6 +26,8 @@
 
 #lastMessage{
     font-size: 12px;
+    overflow-wrap: break-word;
+    width: 260px;
     
 }
 
